Fix modal layout bugs

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -180,7 +180,7 @@ body {
 .modal {
   background: rgba(0, 0, 0, 0.5);
   display: grid;
-  height: 100%;
+  height: 100vh;
   place-content: center;
   position: absolute;
   width: 100%;
@@ -198,13 +198,11 @@ body {
 
   &__background {
     &--light {
-      height: calc(100% - 2rem);
       background: white;
       border-radius: 1rem;
     }
 
     &--dark {
-      height: calc(100% - 2rem);
       background: #151932;
       border-radius: 1rem;
     }
@@ -401,9 +399,16 @@ body {
   }
 
   &__footer {
+    height: calc(4.25rem / 2);
+    position: relative;
+  }
+
+  &__controls {
     display: flex;
     justify-content: space-evenly;
+    position: absolute;
     text-align: center;
+    width: 100%;
   }
 
   &__control {
